--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,24 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://
+
+NEWS_API_KEY=
+NEWS_API_EVERYTHING_URL=
+NEWS_API_TOP_URL=
+
+NYT_API_KEY=
+NYT_API_URL=
+
+TG_API_KEY=
+TG_API_URL=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
